@@ -1,6 +1,7 @@
 
 
-Sep 20     7    PM
+Oct  5     3    PM      3:30 PM     0.5       10.5
+Sep 20     7    PM      8:15 PM     1.25      10
 Sep 20     1:15 PM      3:15 PM     2          8.75
 Sep 19     4:15 PM      6:45 PM     1.5        6.75
 Sep 19     1:45 PM      3:30 PM     1.75       5.25
