@@ -16,6 +16,6 @@ config.action_controller.perform_caching             = false
 # Don't care if the mailer can't send
 config.action_mailer.raise_delivery_errors = false
 
-HOST = "localhost:1500"
+HOST = "localhost:2500"
 
 ANALYTICS = ''
